# DocAI

./: .gitignore  CLAUDE.md  architecture.md  design-prompt.md  plan.md  tasks.md  test.md
docs/: performance-findings.md
docs/superpowers/plans/: 2026-04-22-speed-up-data-extraction.md
financial-extractor/: .env.example  .gitignore  README.md  pyproject.toml  run-worker.sh
financial-extractor/app/: config.py  main.py
financial-extractor/app/api/: jobs.py  results.py  upload.py
financial-extractor/app/models/: job.py
financial-extractor/app/pipeline/: detector.py  docling_processor.py  ollama_extractor.py
financial-extractor/app/queue/: job_store.py  worker.py
financial-extractor/app/storage/: file_store.py  paths.py
financial-extractor/docker/: .dockerignore  Dockerfile  docker-compose.yml
financial-extractor/prompts/: financial_extraction.txt
financial-extractor/scripts/: monitor-resources.sh
financial-extractor/tests/integration/: test_api.py
financial-extractor/tests/unit/: test_config.py  test_detector.py  test_docling_processor.py  test_ollama_extractor.py  test_worker_timing.py
financial-extractor/ui/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
financial-extractor/ui/src/: App.tsx  api.ts  index.css  types.ts
financial-extractor/ui/src/components/: DropZone.tsx  JobsTable.tsx  ViewModal.tsx  icons.tsx
financial-extractor/ui/src/hooks/: useJobPolling.ts
financial-extractor/ui/src/utils/: download.ts
